--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <RelativeLayout
-        android:id="@+id/loading_screen"
+        android:id="@+id/my_loading_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black">
